lifeguard-derive/tests/ui/compile_error_try_into_model_custom_error_convert.stderr
error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/ui/compile_error_try_into_model_custom_error_convert.rs:145:2
    |
145 | }
    |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_try_into_model_custom_error_convert.rs`

error[E0277]: the trait bound `CustomError: From<ParseIntError>` is not satisfied
   --> tests/ui/compile_error_try_into_model_custom_error_convert.rs:140:10
    |
140 | #[derive(DeriveTryIntoModel)]
    |          ^^^^^^^^^^^^^^^^^^ the trait `From<ParseIntError>` is not implemented for `CustomError`
    |
    = note: required for `ParseIntError` to implement `Into<CustomError>`
    = note: this error originates in the derive macro `DeriveTryIntoModel` (in Nightly builds, run with -Z macro-backtrace for more info)
